--- a/package.json
+++ b/package.json
@@ -10,20 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fontsource/roboto": "^5.2.5",
-    "@mui/icons-material": "^7.1.1",
-    "@mui/material": "^7.1.1",
-    "@mui/styled-engine-sc": "^7.1.1",
+    "@chakra-ui/react": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
-    "motion": "^12.16.0",
+    "framer-motion": "^11.5.6",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
-    "styled-components": "^6.1.18",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
