--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-API_URL = http://127.0.0.1:8000/api
+VITE_API_URL = http://127.0.0.1:8000/api
+LAST_FM_API_KEY = 83a7df82fe664c3a612e1cef909acb86
+
+VITE_SPOTIFY_CLIENT_ID = "5541b288b30c4a0ca3551709057130eb"
+VITE_SPOTIFY_CLIENT_SECRET = "b91e8b292d454d51b711485d473adb338b30c4a0ca3551709057130eb"
