--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
+    "d3": "^7.9.0",
     "framer-motion": "^11.5.6",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
